added table heading support for csv table components